$Id: CHANGES,v 1.68 1996/09/29 14:16:09 chuck Exp $

Changes with Apache 1.2b1:

  *) Phase I proxy overhaul:
     Added support for null form data set [Petr Lampa]
     Added RFC 850 date support (Netscape uses it) [Andrew Daviel]
     Removed old ftp handler and conditional compile stuff
     Added server.sin_family=AF_INET to guarantee new ftp works
     Changed proxy ftp userid to proxy_user@apache_host.org [Chuck Murcko]

  *) Cookie module has been renamed from mod_cookies.c to mod_usertrack.c
     to stop user confusion.  You only need the usertrack module if you
     want to accurately track users clickstreams.  You do not need any
     special modules to just use Cookies on your site. [Mark Cox]

  *) Cookies module now logs initial transaction.  Logging for Cookies is
     now handled by using %{Cookie}n directive in log module.  Old
     "CookieLog" directive still works but isn't recommended; see 
     mod_cookies.c for explanation [Mark Cox]

  *) New logging directives, %U (URL path requested), %f filename, 
     %P (Process ID), %{}n (item from notes table) [Alexei Kosut]

  *) Requests can be logged to more than one log file, using multiple
      TransferLog directives, and/or new CustomLog directives with a
      configurable format. [Paul Sutton]

  *) Negotiation updated to implement all aspects of HTTP/1.1, including
      charset and encoding negotiation. Now server-driven negotiation
      can return a list of variants (the 406 response).
      Some code included for transparent negotiation (not compiled
      in by default). [Paul Sutton]

  *) IP Virtual Hosts now work where the vhost IP address is the main
      IP address of the host and the port s not the default port.
      [Paul Sutton]

  *) Domain names on 'allow' and 'deny' lines are now case-insensitive.
      [Paul Sutton]

  *) Netscape 2.x keepalive fix, using BrowserMatch/mod_browser.
     [Chuck Murcko]

  *) Status module updates: prevent rollover/overflow with heavily